# assets-service

./: .dev.env  .env  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: docker-manual-build.yml  docker-publish.yml  docker-test-builds.yml
container/: Containerfile
src/: config.rs  main.rs
src/connections/: object_storage.rs
src/routes/: assets.rs  images.rs  mod.rs
src/setup/: mod.rs
