

[package]
name = "images-service"
version = "0.1.0"
edition = "2024"



[dependencies]
poem = {version = "3", features = []}
poem-openapi = { version = "5", features = ["swagger-ui", "scalar", "chrono", "uuid"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
minio = "0.3.0"
once_cell = "1.19.0"
bytes = "1.10.1"
jsonwebtoken = "9.3.1"
futures-util = "0.3.31"
